# storage/openapi.yml
@@ -19,13 +19,22 @@ paths:
       operationId: app.get_withdrawals
       description: Returns an list of every book withdrawal in the system
       parameters:
-        - name: timestamp
+        - name: start_timestamp
           in: query
           description: Limits the number of items on a page
           schema:
             type: string
             format: date-time
             example: '2022-09-06T10:02:24.03Z'
+          
+        - name: end_timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: '2022-09-06T10:02:24.03Z'
+
       responses:
         '200':
           description: Successfully returned a list of book withdrawal events
@@ -53,7 +62,15 @@ paths:
       operationId: app.get_returns
       description: Returns an list of every book return in the system
       parameters:
-        - name: timestamp
+        - name: start_timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: '2022-09-06T10:02:24.03Z'
+          
+        - name: end_timestamp
           in: query
           description: Limits the number of items on a page
           schema:
